--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "firebase": "^10.7.1",
     "lightweight-charts": "^4.1.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
