--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "erc-20-abi": "^1.0.0",
     "lightweight-charts": "^4.1.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -28,7 +29,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "redux": "^4.2.1",
-    "tailgrids": "^2.1.0"
+    "tailgrids": "^2.1.0",
+    "web3": "^4.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
