--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "erc-20-abi": "^1.0.0",
+    "firebase": "^10.7.1",
     "lightweight-charts": "^4.1.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
